gcc/testsuite/rust/rustc/ui/associated-consts/associated-const-dead-code.rs
#![deny(dead_code)]

struct MyFoo;

impl MyFoo {
    const BAR: u32 = 1;
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() {
    let _: MyFoo = MyFoo;
}

